--- a/nosotros.html
+++ b/nosotros.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Nosotros</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, aperiam!</p>
+
+    <a href="https://www.google.com">Link a google</a>
     
 </body>
 </html>
